# notula

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
src/: app.rs  assets.rs  icons.rs  main.rs
src/components/: mod.rs  text_editor.rs  window_frame.rs
src/components/text_editor/: cursor_position.rs  editor.rs  mod.rs  renderer.rs  text_ops.rs  util.rs
src/editor/: core.rs  mod.rs  renderer.rs
src/file_ops/: io.rs  mod.rs
src/image/: handler.rs
src/models/: document.rs  metadata.rs  mod.rs
src/ui/: menus.rs  mod.rs  status.rs
