[package]
name = "notula"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.24"
eframe = { version = "0.24", features = ["default"] }
env_logger = "0.11.8"
image = "0.24"
uuid = { version = "1.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
arboard = "3.5"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "shellapi", "impl-default"] }
